# Cob-Web---Website-Scaping-Platform

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 141ffbc22b1a_create_scrape_results_table.py  75143b9c20cf_add_progress_column_to_jobs_table.py  93f374b0259a_create_jobs_table.py  a41776681b5d_add_error_message_to_job_urls.py  c73f3dfce931_create_job_urls_table.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: jobs.py
app/core/: config.py
app/db/: database.py
app/models/: job.py  job_url.py  scrape_result.py
app/repositories/: job_repo.py  joburl_repo.py  scrape_result_repo.py
app/schemas/: job.py
app/scrapper/: scraper.py
app/services/: job_services.py
app/websocket/: __init__.py  manager.py  routes.py
app/workers/: celery_app.py  tasks.py
frontend/: Dockerfile  index.html  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/hooks/: useJobSocket.ts
frontend/src/services/: websocket.ts
frontend/src/types/: websocket.ts
nginx/: default.conf
tests/: test_tasks_error_handling.py  test_websocket_manager.py
