[project]
name = "cobweb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "beautifulsoup4>=4.15.0",
    "celery>=5.6.3",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
    "websockets>=16.0",
]
